tests/snapshots/run_wpt_conformance__trtx_maxPool2d_float16_4D_tensor_options_outputShapeRounding_floor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "maxPool2d.https.any.js",
    "maxPool2d float16 4D tensor options.outputShapeRounding=floor",
    "trtx",
    "PASS",
)
